[package]
name = "gramit"
version = "0.1.1" # Bump html_root_url
authors = ["John Andrews <theunderdog09@gmail.com>"]
edition = "2018"

description = "Simple, 32-bit floating-point graphics math."
readme = "README.md"

documentation = "https://docs.rs/gramit"
homepage = "https://github.com/wuggen/gramit"
repository = "https://github.com/wuggen/gramit"

keywords = ["graphics", "math", "opengl"]
categories = ["graphics", "mathematics"]
license = "MIT"

[features]
default = []

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
